Update: Add smooth scroll animation on page refresh

--- a/index.html
+++ b/index.html
@@ -2506,7 +2506,7 @@
         type_renter: "賃借人",
         type_landlord: "大家",
         type_investor: "投資家",
-        details: "(どこ、いつ、予算、Crypto/Traditional) – より良い、より早い結果を望む場合は、以下のフォームを記入してエキスパートマッチングを受けてください！",
+        details: "(どこ、いつ、予算、暗号通貨/従来型) – より良い、より早い結果を望む場合は、以下のフォームを記入してエキスパートマッチングを受けてください！",
         dropdown_btn: "マッチングを強化 – よりスマートなマッチングのために詳細を追加 +",
         intake_title: "クライアント情報収集",
         client_type: "クライアントタイプ",
@@ -2812,7 +2812,7 @@
         type_renter: "임차인",
         type_landlord: "大家",
         type_investor: "투자자",
-        details: "(어디, 언제, 예산, Crypto/Traditional) – 더 나은, 더 빠른 결과를 원하시나요? 아래 양식을 작성하여 전문가 매칭을 받으세요!",
+        details: "(어디, 언제, 예산, 암호화폐/전통적) – 더 나은, 더 빠른 결과를 원하시나요? 아래 양식을 작성하여 전문가 매칭을 받으세요!",
         dropdown_btn: "매칭 향상 – 더 똑똑한 매칭을 위해 자세한 정보 추가 +",
         intake_title: "고객 정보 수집",
         client_type: "고객 유형",
