--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       height: 100%;
       background: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=2070&auto=format&fit=crop') no-repeat center center;
       background-size: cover;
+      background-attachment: fixed;
       z-index: -1;
     }
 
@@ -1083,8 +1084,32 @@
       };
     }
 
-    // Parallax effect with mobile check
+    // Parallax effect with improved mobile handling
     function updateParallax() {
+      // Detect mobile and Chrome browser
+      const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+      const isChrome = /Chrome/i.test(navigator.userAgent);
+
+      // Apply fixed background for mobile devices (especially Chrome)
+      if (isMobile) {
+        // For mobile devices, use a fixed background approach instead of parallax
+        document.body.style.height = '100vh';
+        document.body.style.minHeight = '100vh';
+
+        // If it's Chrome mobile, ensure background stays fixed
+        if (isChrome) {
+          const bg = document.querySelector('body::before');
+          if (bg) {
+            // Reset any transform to prevent the zooming effect
+            bg.style.transform = 'none';
+            // Force hardware acceleration to reduce flickering
+            bg.style.backfaceVisibility = 'hidden';
+            bg.style.willChange = 'transform';
+          }
+        }
+        return;
+      }
+
       // Only apply parallax on desktop
       if (window.innerWidth > 768) {
         const scrollY = window.scrollY;
@@ -2289,7 +2314,7 @@
         other_reason: "Altro motivo",
         sell_timeline: "Tempistiche di vendita/affitto:",
         asap: "Il prima possibile",
-        property_condition: "Condição della proprietà:",
+        property_condition: "Condição da proprietà:",
         excellent: "Eccellente",
         good: "Buono",
         fair: "Discreto",
