feat: Add chatbot integration with popup window
- Update chatbot button to open in new window
- Add chatbot directory with initial files
- Remove coming soon alert in favor of actual chatbot functionality

--- a/index.html
+++ b/index.html
@@ -3261,7 +3261,7 @@
   <script>
     // Chatbot button handler
     document.getElementById('chatbotButton').addEventListener('click', function () {
-      alert('AI Assistant coming soon! Check back later for Web3 and real estate assistance.');
+      window.open('/chatbot/index.html', 'Web3Chatbot', 'width=700,height=550,left=100,top=100,menubar=no,toolbar=no,location=no,status=no');
     });
   </script>
 </body>
