fix: adjust spacing of Using Crypto checkbox to be closer to details box

--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
             placeholder="(where, when, budget, Crypto/Traditional) – Want better, faster results? Fill out the form below for expert-level matching!"></textarea>
         </div>
 
-        <div class="form-group" style="text-align: left;">
+        <div class="form-group" style="text-align: left; margin-top: -13px;">
           <label class="checkbox-label" for="using_crypto">
             <span data-lang="using_crypto">Using Crypto</span>
             <input type="checkbox" name="entry.870420118" value="Yes" id="using_crypto">
